--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,8 @@ apply plugin: 'groovy'
 apply plugin: 'rapidminer-publish'
 
 buildscript {
-	// check for updates every build until gradle plugins have been released
-	configurations.all {
-		resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-	}
-
 	dependencies {
-		classpath group: 'com.rapidminer.gradle', name: 'rapidminer-publish', version:'1.0.000-SNAPSHOT', changing: true
+		classpath 'com.rapidminer.gradle:publish:0.1.1'
 	}
 }
 
