--- a/build.gradle
+++ b/build.gradle
@@ -1,37 +1,16 @@
-apply plugin: 'groovy'
-apply plugin: 'rapidminer-publish'
-
 buildscript {
 	dependencies {
-		classpath 'com.rapidminer.gradle:publish:0.1.1'
+		classpath 'com.rapidminer.gradle:gradle-plugin:0.1.2'
 	}
 }
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+apply plugin: 'rapidminer-gradle-plugin'
 
-// define publish repositories and publications to upload
-uploadConfig {
-	releaseRepo 'libs-release-local'
-	snapshotRepo 'libs-snapshot-local'
-	contextUrl "${artifactory_contextUrl}"
-	publication 'mavenJava'
-}
-
-// define Maven publication
-publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			from components.java
-			artifactId "java-basics"
-		}
-	}
+gradlePlugin {
+	id 'java-basics'
 }
 
 dependencies {
-	compile gradleApi()
-	compile localGroovy()
-	
 	// ###################
 	// Used to create Maven like provided configuration
 	// See https://github.com/spring-projects/gradle-plugins/tree/master/propdeps-plugin
