Adds shortened Gradle plugins name that complies with plugins.gradle.org portal standards

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,6 @@
-buildscript {
-	dependencies {
-		classpath 'com.rapidminer.gradle:gradle-plugin:0.2.+'
-	}
+plugins {
+	id 'com.rapidminer.gradle-plugin' version '0.2.9'
 }
-
-apply plugin: 'com.rapidminer.gradle.gradle-plugin'
 
 gradlePlugin {
 	id 'java-basics'
