Changes version to 0.4.0-SNAPSHOT, updates documentation, updates nebula plugin version to 3.0.3, sets Java target compatibility to 1.8

--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,5 @@ plugins {
 gradlePlugin { id 'java-basics' }
 
 dependencies  {
-	compile 'com.netflix.nebula:gradle-extra-configurations-plugin:2.2.+'
+	compile 'com.netflix.nebula:gradle-extra-configurations-plugin:3.0.3'
 }
